List of the changes:

Version 0.0.8.2 (05.10.2014):
- improved and fixed test logging in GUI version
- added support for Windows GUI (error handling)
- added support for Windows Console for GUI version
- fixed device selection for CLI and GUI version

Version 0.0.8.1 (04.10.2014):
- fixes for broken labels
- fixed device choice list (display all devices even if names are dupliclated)

Version 0.0.8 (03.10.2014):
- added GUI version
- fixed device selection for CLI and GUI
- improved program messages
- added device informations

Version 0.0.5.3 (23.09.2014):
- prints always when error happened
- calibration kernel progress
- ensure this same data for every kernel execution while a calibration
- small optimization for getChoosenCLDevicesFromList
- fixed mistake in test type list

Version 0.0.5.2 (22.09.2014):
- fixed serious memory leak

Version 0.0.5.1 (22.09.2014):
- fixed fatal bug (unitialized variable)
- removed obsolete optimization flag for a kernel building

Version 0.0.5  (21.09.2014):
- added new test (polynomial walking with local memory)
- added '-g' ('--groupSize') option to set work group size
- prints list of the supported tests at printing help
- renames builtinKernels to testTypes
- improved help message
- extends calibration to kitersNum=40

Version 0.0.4.3 (20.09.2014):
- added '-V' option (print version)
- fix for NVIDIA drivers

Version 0.0.4.2 (20.09.2014):
- fixed overflow for elapsed time
- fixes for MSVC C/C++ Compiler

Version 0.0.4.1 (19.09.2014):
- makes parameter of '-I' option as optional
- fixed fatal error handling